--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,23 @@
 version: "3.8"
 
 services:
+  collector:
+    depends_on:
+      - postgres
+    build:
+      context: collector
+    image: collector-service
+    container_name: collector
+
   postgres:
     image: postgres:latest
+    container_name: postgres
     environment:
       POSTGRES_DB: "collector_db"
       POSTGRES_USER: "collector"
-      POSTGRES_PASSWORD: "collector_password"
+      POSTGRES_PASSWORD: "password"
+
+    hostname: postgres
     ports:
       - "5432:5432"
     volumes:
