--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,7 +38,7 @@ services:
 
   collector-worker:
     <<: *default-collector-service
-    command: celery -A worker.celery_app worker --loglevel=info
+    command: celery -A services.tasks.celery_app worker --loglevel=info
 
     depends_on:
       - collector
@@ -46,7 +46,7 @@ services:
   collector-scheduler:
     <<: *default-collector-service
     container_name: collector-scheduler
-    command: celery -A worker.celery_app beat
+    command: celery -A services.tasks.celery_app beat
 
   postgres:
     image: postgres:latest
