--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,6 @@
 version: "3.8"
 
 x-default-environment: &default-environment
-  POSTGRES_DB: ${POSTGRES_DB:-collector_db}
-  POSTGRES_USER: ${POSTGRES_USER:-collector}
-  POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
   POSTGRES_HOST: ${POSTGRES_HOST:-postgres}
   POSTGRES_PORT: ${POSTGRES_PORT:-5432}
   REDIS_HOST: ${REDIS_HOST:-redis}
@@ -15,7 +12,7 @@ x-default-collector-service: &default-collector-service
 
   environment:
     <<: *default-environment
-    DATABASE_URL: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+    DATABASE_URL: postgresql+psycopg2://${POSTGRES_USER:-collector}:${POSTGRES_PASSWORD:-password}@${POSTGRES_HOST:-postgres}:${POSTGRES_PORT-5432}/${POSTGRES_DB:-collector_db}
     CELERY_BROKER_URL: redis://${REDIS_HOST:-redis}:${REDIS_PORT:-6379}/0
 
   depends_on:
